# robotica

./: README.md
Elaborato/: Appunti.txt
Elaborato/Altro/modelai.gettysburg.edu-visual-servo/: detector.py
Elaborato/detection-color-opencv/: detection.py
Elaborato/detection-color-opencv-Fiorio/: detection.py
Elaborato/detection-color-opencv1/: detection.py
Elaborato/ibvs-visp/: CMakeCache.txt  tutorial-ibvs-4pts  tutorial-ibvs-4pts-display  tutorial-ibvs-4pts-display.cpp  tutorial-ibvs-4pts-plotter  tutorial-ibvs-4pts-plotter-continuous-gain-adaptive  tutorial-ibvs-4pts-wireframe-robot-afma6
Elaborato/modelai.gettysburg.edu-visual-servo/: echo.py
Elaborato/move-robot-ibvs-visp/: Makefile  cmake_install.cmake  tutorial-ibvs-4pts-image-tracking  tutorial-ibvs-4pts-ogre  tutorial-ibvs-4pts-ogre-tracking  tutorial-ibvs-4pts-plotter-gain-adaptive  tutorial-ibvs-4pts-wireframe-camera  tutorial-ibvs-4pts-wireframe-robot-viper
ElaboratoR1-ParteA/Listener-Talker_catkin_ws/devel/: env.sh  local_setup.sh
ElaboratoR1-ParteA/catkin_ws/devel/: .catkin  local_setup.bash  setup.zsh
ElaboratoR1-ParteB/: PrimoElaborato.txt
ElaboratoR1-ParteB/OLD_catkin_ws/devel/: _setup_util.py
ElaboratoR2/Cinematica/: a.out  kinematics.cpp
ElaboratoR2/CinematicaInversa/: a.out  inv_kinematics.cpp
ElaboratoR2/urdf_scara/: package.xml
catkin_ws/devel/: .catkin
catkin_ws/src/scara/: CMakeLists.txt
quickstart_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
urdf_tutorial/urdf/: my_robot.urdf
(+509 files in other folders)
